// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceMath #getInputToRatio edge cases gas: returns 0 if price is equal 1`] = `545`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps gas 1`] = `9912`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps snapshot 1`] = `
Object {
  "amountIn": "11305074013661421002",
  "amountInLessFee": "11237243569579452475",
  "amountOut": "183503419072273967",
  "lpFee": 60,
  "priceAfterSwap": "389422264390112072139787224691507200",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112072146146463639740389",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps gas 1`] = `9922`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps snapshot 1`] = `
Object {
  "amountIn": "21133345019035461735",
  "amountInLessFee": "20710678118654752500",
  "amountOut": "292893218813452475",
  "lpFee": 200,
  "priceAfterSwap": "519229685853482762853049632922009600",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "519229685853482762860392649559216768",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "519229685853482762853049632922009600",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps gas 1`] = `10029`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps snapshot 1`] = `
Object {
  "amountIn": "415459942199694131",
  "amountInLessFee": "414213562373095048",
  "amountOut": "29289321881345247519",
  "lpFee": 30,
  "priceAfterSwap": "259614842926741381723916990267895141",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381356766158407536695",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps gas 1`] = `10029`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps snapshot 1`] = `
Object {
  "amountIn": "416713845445769666",
  "amountInLessFee": "414213562373095048",
  "amountOut": "29289321881345247519",
  "lpFee": 60,
  "priceAfterSwap": "259614842926741381723916990267895141",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381356766158407536695",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves gas 1`] = `4361`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves snapshot 1`] = `
Object {
  "amountIn": "417",
  "amountInLessFee": "414",
  "amountOut": "29278",
  "lpFee": 60,
  "priceAfterSwap": "259695628309264554133616521495830006",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259332293910411217661580047402806957",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000",
  "reserve1": "100000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps gas 1`] = `10029`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps snapshot 1`] = `
Object {
  "amountIn": "155399837648670547",
  "amountInLessFee": "154700538379251529",
  "amountOut": "13397459621556135322",
  "lpFee": 45,
  "priceAfterSwap": "389422264390112072153277207641951089",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112071483274721103237925",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;
